# ArdaLiveMediaServer

./: CMakeLists.txt  README.md  vcpkg.json
App/: CMakeLists.txt
App/src/: main.cpp
CMake/: AddGitSubmodule.cmake  Docs.cmake
DevApps/: CMakeLists.txt
DevApps/GenericRtpClientDevApp/: CMakeLists.txt
DevApps/GenericRtpClientDevApp/src/: main.cpp
DevApps/RtspClientDevApp/: CMakeLists.txt
DevApps/RtspClientDevApp/src/: main.cpp
Docs/: Doxyfile
Gondor/: CMakeLists.txt
Gondor/Execution/: CMakeLists.txt
Gondor/Execution/include/Gondor/Execution/: CallbackAwaiter.hpp  ExecutionContext.hpp  ITask.hpp  ITasksContextProxy.hpp  ITasksExecutor.hpp  TasksContext.hpp  TasksContextProxy.hpp  TasksExecutor.hpp
Gondor/Execution/src/: ExecutionContext.cpp  TasksContext.cpp  TasksContextProxy.cpp  TasksExecutor.cpp
HttpServer/: CMakeLists.txt
HttpServer/HealthCheck/: CMakeLists.txt
HttpServer/HealthCheck/include/HealthCheck/: HealthCheckController.hpp
HttpServer/HealthCheck/include/HttpServer/HealthCheck/: HealthCheckController.hpp
HttpServer/HealthCheck/src/: HealthCheckController.cpp
HttpServer/Resources/: CMakeLists.txt
HttpServer/Resources/include/HttpServer/Resources/: GenericRtpController.hpp  ResourcesController.hpp  WebRtcController.hpp
HttpServer/Resources/include/HttpServer/Resources/GenericRtpController/: PostResourceHandler.hpp
HttpServer/Resources/include/Resources/: IPeerConnection.hpp  ISignalingHandler.hpp  PeerConnection.hpp  VideoEndpointRx.hpp  VideoEndpointTx.hpp  WebRtcController.hpp  WhepSignalingHandler.hpp  WhipSignalingHandler.hpp
HttpServer/Resources/src/: GenericRtpController.cpp  PeerConnection.cpp  ResourcesController.cpp  VideoEndpointRx.cpp  VideoEndpointTx.cpp  WebRtcController.cpp  WhepSignalingHandler.cpp  WhipSignalingHandler.cpp
HttpServer/Resources/src/GenericRtpController/: PostResourceHandler.cpp
HttpServer/Server/: CMakeLists.txt
HttpServer/Server/include/HttpServer/: Server.hpp
HttpServer/Server/src/: Server.cpp
Media/: CMakeLists.txt
Media/Core/: CMakeLists.txt
Media/Core/include/Core/: Frame.hpp  VideoFrame.hpp
Media/Core/include/Media/Core/: Frame.hpp  MediaBuffer.hpp  VideoFrame.hpp
Media/Core/include/Media/Core/Rtp/: RtpPacket.hpp
Media/Core/src/: Frame.cpp  MediaBuffer.cpp  VideoFrame.cpp
Media/Sdp/: CMakeLists.txt  README.md
Media/Sdp/include/Media/Sdp/: SessionDescription.hpp
Media/Sdp/include/Media/Sdp/Details/: Attribute.h  Bandwidth.h  BaseAttribute.h  CNameAttribute.h  CandidateAttribute.h  Connection.h  CryptoAttribute.h  ExtMapAttribute.h  FingerprintAttribute.h  FormatAttribute.h  GroupAttribute.h  Information.h  Key.h  MediaDescription.h  MidAttribute.h  Origin.h  PreviousSSRCAttribute.h  RTPMapAttribute.h  SCTPMapAttribute.h  SSRCAttribute.h  SSRCGroupAttribute.h  SessionName.h  Timing.h
Media/Sdp/src/: SessionDescription.cpp
Media/Sdp/src/Details/: Bandwidth.cpp  BaseAttribute.cpp  CNameAttribute.cpp  CandidateAttribute.cpp  Connection.cpp
Media/Sdp/src/Details/abnf/: Parser.cpp  Parser.hpp  ParserContext.cpp  ParserContext.hpp  ParserException.cpp  ParserException.hpp  Rule.cpp  Rule.hpp  Rule_ALPHA.cpp  Rule_ALPHA.hpp  Rule_BIT.cpp  Rule_BIT.hpp  Rule_CFWS.cpp  Rule_CFWS.hpp  Rule_CHAR.cpp  Rule_CHAR.hpp  Rule_CR.cpp  Rule_CR.hpp  Rule_CRLF.cpp  Rule_CRLF.hpp  Rule_CTL.cpp  Rule_CTL.hpp  Rule_DIGIT.cpp  Rule_DIGIT.hpp  Rule_DQUOTE.cpp  Rule_DQUOTE.hpp  Rule_EQUALS.cpp  Rule_EQUALS.hpp  Rule_FQDN.cpp  Rule_FQDN.hpp  Rule_FWS.cpp  Rule_FWS.hpp  Rule_HEXDIG.cpp  Rule_HEXDIG.hpp  Rule_HTAB.cpp  Rule_HTAB.hpp  Rule_IP4_multicast.cpp  Rule_IP4_multicast.hpp  Rule_IP6_multicast.cpp  Rule_IP6_multicast.hpp  (+406 more)
Media/Sdp/src/Details/builders/: AttributeBuilder.h  BandwitdhBuilder.h  BaseAttributeBuilder.h  CNameAttributeBuilder.h  CandidateAttributeBuilder.h  ConnectionBuilder.h  CryptoAttributeBuilder.h  ExtMapAttributeBuilder.h  FingerprintAttributeBuilder.h  FormatAttributeBuilder.h  GroupAttributeBuilder.h  InformationBuilder.h  KeyBuilder.h  MediaDescriptionBuilder.h  MidAttributeBuilder.h  OriginBuilder.h  PreviousSSRCAttributeBuilder.h  RTPMapAttributeBuilder.h  SCTPMapAttributeBuilder.h  SSRCAttributeBuilder.h  SSRCGroupAttributeBuilder.h  SessionDescriptionBuilder.cpp  SessionDescriptionBuilder.h  SessionNameBuilder.h  TimeBuilder.h
MediaServer/: CMakeLists.txt
MediaServer/GenericRtpClient/: CMakeLists.txt
MediaServer/GenericRtpClient/include/MediaServer/GenericRtpClient/: GenericRtpClient.hpp  IGenericRtpClient.hpp
MediaServer/GenericRtpClient/include/MediaServer/GenericRtpClient/Details/: RtpClientSession.hpp
MediaServer/GenericRtpClient/src/: GenericRtpClient.cpp
MediaServer/GenericRtpClient/src/Details/: RtpClientSession.cpp
MediaServer/MediaManager/: CMakeLists.txt
MediaServer/MediaManager/include/MediaServer/MediaManager/: IMediaManager.hpp  IMediaTrack.hpp  MediaManager.hpp  MediaResource.hpp
MediaServer/MediaManager/src/: MediaManager.cpp  MediaResource.cpp
MediaServer/MediaServer/: CMakeLists.txt
MediaServer/MediaServer/include/MediaServer/: GenericRtpClientProxy.hpp  MediaManagerProxy.hpp  Server.hpp
MediaServer/MediaServer/src/: GenericRtpClientProxy.cpp  MediaManagerProxy.cpp  Server.cpp
MediaServer/RtspClient/: CMakeLists.txt
MediaServer/RtspClient/include/MediaServer/RtspClient/: IRtspClient.hpp  RtspClient.hpp
MediaServer/RtspClient/include/MediaServer/RtspClient/Details/: RtspClientSession.hpp
MediaServer/RtspClient/src/: RtspClient.cpp
MediaServer/RtspClient/src/Details/: RtspClientSession.cpp
Trash/: IPeerConnection.hpp  ISignalingHandler.hpp  PeerConnection.cpp  PeerConnection.hpp  VideoEndpointRx.cpp  VideoEndpointRx.hpp  VideoEndpointTx.cpp  VideoEndpointTx.hpp  (+4 more)
UnitTests/HttpServerTests/HealthCheckTests/: CMakeLists.txt  HealthCheckControllerTests.cpp
UnitTests/MediaServerTests/MediaManagerTests/: CMakeLists.txt  MediaResourceTests.cpp
UnitTests/MediaServerTests/MediaServerTests/: CMakeLists.txt  ServerTests.cpp
UnitTests/MediaTests/SdpTests/: CMakeLists.txt  SessionDescriptionTests.cpp
(+15 files in other folders)
